// protoc --gogofaster_out=. ./math/proto/proto.proto

syntax = "proto3";

package go.micro.srv.math;

service Math {
  rpc Add(MathAddArgs) returns (MathAddReply) {};
  rpc Subtract(MathSubtractArgs) returns (MathSubtractReply) {};
}

message MathAddArgs {
  int64 First = 1;
  int64 Second = 2;
}

message MathAddReply { int64 Result = 3; }

message MathSubtractArgs {
  int64 First = 1;
  int64 Second = 2;
}

message MathSubtractReply { int64 Result = 3; }
